# homeassistant-three-state-window

./: .gitignore  AGENTS.md  README.md  hacs.json  pyproject.toml
.github/workflows/: ci.yml
custom_components/three_state_window/: __init__.py  binary_sensor.py  config_flow.py  const.py  manifest.json  sensor.py  strings.json
custom_components/three_state_window/translations/: de.json
tests/: conftest.py  test_init.py
