[project]
name = "three-state-window"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-homeassistant-custom-component>=0.13",
    "aiohttp",
    "voluptuous",
]
lint = [
    "ruff>=0.11",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
